# Meetcord.ai

./: .gitignore  README.md  adb_log.txt  build.gradle.kts  crash.txt  settings.gradle.kts  test_tts.ps1
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/whisper.cpp/: .gitignore  CMakeLists.txt  README.md
app/src/main/cpp/whisper.cpp/.devops/: main-cuda.Dockerfile  main-intel.Dockerfile  main-musa.Dockerfile  main-vulkan.Dockerfile  main.Dockerfile
app/src/main/cpp/whisper.cpp/.github/workflows/: bindings-ruby.yml  build-gcc.yml  build-sanitize.yml  examples.yml  release.yml
app/src/main/cpp/whisper.cpp/.pi/gg/: SYSTEM.md
app/src/main/cpp/whisper.cpp/bindings/javascript/: package.json
app/src/main/cpp/whisper.cpp/bindings/ruby/: .document  .rdoc_options  README.md  Rakefile  extsources.rb
app/src/main/cpp/whisper.cpp/ci/: run.sh
app/src/main/cpp/whisper.cpp/cmake/: whisper.pc.in
app/src/main/cpp/whisper.cpp/examples/: CMakeLists.txt  common-ggml.cpp  common-whisper.cpp  common-whisper.h  ffmpeg-transcode.cpp
app/src/main/cpp/whisper.cpp/examples/bench/: bench.cpp
app/src/main/cpp/whisper.cpp/examples/bench.wasm/: emscripten.cpp
app/src/main/cpp/whisper.cpp/examples/cli/: cli.cpp
app/src/main/cpp/whisper.cpp/examples/server/: README.md  server.cpp
app/src/main/cpp/whisper.cpp/examples/talk-llama/: CMakeLists.txt
app/src/main/cpp/whisper.cpp/models/: convert-whisper-to-coreml.py  download-ggml-model.sh
app/src/main/cpp/whisper.cpp/src/: whisper.cpp
app/src/main/cpp/whisper.cpp/tests/: CMakeLists.txt  test-common-utf8.cpp
(+51 files in other folders)
